<resources>
    <string name="app_name">Lab3A</string>
    <string name="action_settings">Settings</string>
    <string name="_7">7</string>
    <string name="c">c</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="x">x</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="div">/</string>
    <string name="sqrt">√</string>
    <string name="prcent">%</string>
    <string name="_4">4</string>
    <string name="pom">±</string>
    <string name="period">.</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="_0">0</string>
    <string name="mod">mod</string>
</resources>
